Configure upstream port or specify default, and fix unicode in error page title

--- a/config/50x.html
+++ b/config/50x.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ManyFEWS – Error</title>
+<title>ManyFEWS - Error</title>
 <style>
 body { width: 35em; margin: 2em;
 font-family: Tahoma, Verdana, Arial, sans-serif; }
